# BlasBooster-ng

./: CMakeLists.txt  README.md  conanfile.txt
.devcontainer/: Dockerfile  README.txt  devcontainer.json
.github/workflows/: cmake.yml
src/: CMakeLists.txt  DenseMatrix.h  Dimension.h  DynamicMatrix.h  DynamicMatrixTypeList.h  EmptyTypes.h  Matrix.h  MatrixBase.h  Memory.h  Parameter.h  SparseMatrix.h  SparseStorage.h  Storage.h  StripedIterator.h  TypeName.h  Utilities.h  new_design.cpp
tests/: CMakeLists.txt  main.cpp  test_dense.cpp  test_dynamic.cpp  test_sparse.cpp  test_xtensor.cpp
